metaport-standalone-new-vpc/metaport-single-newvpc-latest-v5.0.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: This template creates a new VPC, NAT Gateway, IGW, and deploys a single MetaPort Connector into the new VPC (20201029)

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Network Configuration"
        Parameters:
          - VpcCidr
          - PublicSubnet1ACidr
          - PrivateSubnet1ACidr
          - CreateNATGateway
          - ResourcesTagName

      - Label:
          default: "MetaPort EC2 Instance Configuration"
        Parameters:
          - InstanceType
          - LatestAMI
          - KeyName
          - SSHLocation
          - SSMRoleAgreement

      - Label:
          default: "MetaPort Installation Token"
        Parameters:
          - InstallationToken

    ParameterLabels:
      VpcCidr:
        default: VPC CIDR
      PublicSubnet1ACidr:
        default: Public subnet CIDR
      PrivateSubnet1ACidr:
        default: Private subnet CIDR
      ResourcesTagName:
        default: Resources prefix tag
      CreateNATGateway:
        default: NAT Gateway Required
      InstanceType:
        default: Instance type
      LatestAMI:
        default: MetaPort AMI ID
      KeyName:
        default: Key Name
      SSHLocation:
        default: SSH Location
      SSMRoleAgreement:
        default: Sessions Manager (SSM-SM)
      InstallationToken:
        default: Metaport1 Installation Token

Parameters:
  VpcCidr:
    Description: >-
      CIDR block for the VPC
    Type: String
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    Default: '192.168.0.0/16'
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28

  PublicSubnet1ACidr:
    Description: >-
      CIDR block for public subnet A located in the 1st Availability Zone
    Type: String
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    Default: '192.168.1.0/24'
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28

  PrivateSubnet1ACidr:
    Description: >-
      CIDR block for private subnet A located in the 1st Availability Zone
    Type: String
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    Default: '192.168.2.0/24'
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28

  ResourcesTagName:
    Description: (optional)
    Type: String

  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the MetaPort
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Please choose a valid KeyName

  SSHLocation:
    Description: The source IP address (/32) or source IP address range (x.x.x.x/x) that will be allowed to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  InstallationToken:
    Description: >-
      The installation token obtained from the Meta management console
    Type: String
    NoEcho: 'true'
    MinLength: '8'
    MaxLength: '255'
    AllowedPattern: "[a-zA-Z0-9]*"

  InstanceType:
    Description: >-
      Choose the EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
      - c5.large
      - c5.xlarge
      - c5n.large
      - c5n.xlarge
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t3.micro
      - t3.small
      - t3.medium
      - t3.large
      - t3.xlarge
    ConstraintDescription: "must be a valid EC2 instance type."

  LatestAMI:
    Description: >-
      The Latest MetaPort AMI ID
    Type: AWS::EC2::Image::Id

  CreateNATGateway:
    Type: String
    Default: "Yes"
    AllowedValues: [ "Yes", "No" ]
    ConstraintDescription: must be yes or no

  SSMRoleAgreement:
    Description: Do you want to create an SSM Role for sessions manager access? (Agree/Disagree)
    Type: String
    Default: Agree
    AllowedValues:
      - Agree
      - Disagree
    ConstraintDescription: must be Agree or Disagree

Conditions:
  CreateSSMRole:
    'Fn::Not':
      - 'Fn::Equals':
        - Ref: SSMRoleAgreement
        - Disagree
        
  NatGatewayCondition:
    'Fn::Not':
      - 'Fn::Equals':
        - Ref: 'CreateNATGateway'
        - 'No'

  ResourcesTagNameGiven:
    Fn::Not:
      - Fn::Equals:
          - Ref: ResourcesTagName
          - ""

Resources:
# MetaPort1 Instance Configuration
  MetaPort1:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile:
        'Fn::If':
          - CreateSSMRole
          - Ref: MetaPortInstanceProfile
          - Ref: 'AWS::NoValue'
      ImageId:
        Ref: LatestAMI
      InstanceType:
        Ref: InstanceType
      SubnetId:
        Ref: PrivateSubnet1A
      AvailabilityZone:
        'Fn::Select':
          - 0
          - Fn::GetAZs: ""
      SecurityGroupIds:
        - Ref: MetaSecurityGroup
      KeyName:
        Ref: KeyName
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - 'Fn::If':
                    - ResourcesTagNameGiven
                    - Ref: ResourcesTagName
                    - Ref: 'AWS::StackName'
                - MetaPort1
      # Metaport Onboard Script [Provide your OTAP Code]
      UserData:
        Fn::Base64: !Join
          - '\n'
          - - !Sub |
              #!/bin/bash
              su mpadmin -c "metaport onboard ${InstallationToken}" > metaport_onboard.txt
              shutdown -r +1

# Create SSM-SM Role based on user agreement condition
  MetaPortSSMIAMRole:
    Type: AWS::IAM::Role
    Condition: CreateSSMRole
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  MetaPortInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Condition: CreateSSMRole
    Properties:
      Path: /
      Roles:
        - Ref: MetaPortSSMIAMRole

# Custom VPC Configuration
  MetaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - _
              - - 'Fn::If':
                    - ResourcesTagNameGiven
                    - Ref: ResourcesTagName
                    - Ref: 'AWS::StackName'
                - MetaVPC

# Internet Gateway Configuration
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - 'Fn::If':
                    - ResourcesTagNameGiven
                    - Ref: ResourcesTagName
                    - Ref: 'AWS::StackName'
                - IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MetaVPC
      InternetGatewayId:
        Ref: InternetGateway

# Private Subnets Configuration
  PrivateSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MetaVPC
      CidrBlock:
        Ref: PrivateSubnet1ACidr
      AvailabilityZone:
        'Fn::Select':
          - 0
          - Fn::GetAZs: ""

# Public Subnets Configuration
  PublicSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MetaVPC
      CidrBlock:
        Ref: PublicSubnet1ACidr
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        'Fn::Select':
          - 0
          - Fn::GetAZs: ""

# Private Route Table Association Configuration
  PrivateSubnet1ARouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MetaVPC
      Tags:
        - Key: Name
          Value: Private Subnet 1A
        - Key: Network
          Value: Private

  PrivateSubnet1ARoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateSubnet1ARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        'Fn::If':
          - NatGatewayCondition
          - Ref: NatGateway
          - Ref: 'AWS::NoValue'

  PrivateSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateSubnet1ARouteTable
      SubnetId:
        Ref: PrivateSubnet1A

# Public Route Table Association Configuration
  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MetaVPC

  PublicSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetRouteTable
      SubnetId:
        Ref: PublicSubnet1A

  PublicSubnetRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicSubnetRouteTable

 # NAT Gateway and EIP Configuration
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Condition: NatGatewayCondition
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Condition: NatGatewayCondition
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId:
        'Fn::GetAtt':
          - NatGateway1EIP
          - AllocationId
      SubnetId:
        Ref: PublicSubnet1A

# Metaport Standard Security Group
  MetaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MetaPort Security Group
      VpcId:
        Ref: MetaVPC
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - 'Fn::If':
                    - ResourcesTagNameGiven
                    - Ref: ResourcesTagName
                    - Ref: 'AWS::StackName'
                - MetaSecurityGroup

# Metaport Inbound SSH and ICMP Security Group (Must be Connected to NaaS)
  SecurityGroupIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow Inbound SSH to the MetaPort
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp:
        Ref: SSHLocation

  SecurityGroupIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow Inbound SSH to the MetaPort
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp:
        Ref: SSHLocation

# Metaport Outbound IPSec Security Group
  SecurityGroupEgressICMP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow Outbound ICMP Traffic
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp: 0.0.0.0/0

  SecurityGroupEgressHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow Outbound HTTPS Traffic
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

  SecurityGroupEgressIKE:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow Outbound IKE Traffic
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: udp
      FromPort: 500
      ToPort: 500
      CidrIp: 0.0.0.0/0

  SecurityGroupEgressNATT:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow Outbound NAT-T Traffic
      GroupId:
        Ref: MetaSecurityGroup
      IpProtocol: udp
      FromPort: 4500
      ToPort: 4500
      CidrIp: 0.0.0.0/0

Outputs:
  VPCId:
    Description: Meta VPC CIDR
    Value:
      Ref: VpcCidr

  PrivateSubnet1AId:
    Description: Private Subnet
    Value:
      Ref: PrivateSubnet1A

  PublicSubnet1AId:
    Description: Public Subnet
    Value:
      Ref: PublicSubnet1A

  MetaSecurityGroup:
    Description: Meta Security Group
    Value:
      Ref: MetaSecurityGroup

  NATGWEIP:
    Description: NAT Gateway Elastic IP
    Value:
      Ref: NatGateway1EIP

  MetaPort1AvailabilityZone:
    Description: Metaport1 Private IP Address
    Value:
      'Fn::GetAtt':
        - MetaPort1
        - AvailabilityZone

  MetaPort1PrivateIPAddress:
    Description: Metaport1 Private IP Address
    Value:
      'Fn::GetAtt':
        - MetaPort1
        - PrivateIp

  MetaPort1PrivateDnsName:
    Description: Metaport1 Private DNS Name
    Value:
      'Fn::GetAtt':
        - MetaPort1
        - PrivateDnsName
